# LazyTrainerApp

./: .gitignore  Dockerfile  LazyTrainer_DB_Guide.md  docker-compose.yml  exercises.json  exercises_muscles_adder.ipynb  exercises_selector_prompt.txt  exercises_selector_query.txt  requirements.txt
alembic/: env.py
alembic/versions/: 28c3c3428d83_pop_tables.py  333cd51b841f_fix_equipment_relations.py  49d60ff4bff5_added_exercises.py  64024b99c006_feat_nuova_colonna_modified_columns.py  6d67b34ed762_pop_tables.py  7302dcb216ea_pop_tables.py  7e15e471bfef_pop_tables.py  7e3c59be6931_pop_tables.py  8c4562ea8535_pop_tables.py  b3dd427886bb_fix_tables.py  b7aca883eb50_fix_equipment_relations.py  b7e57b5b06b6_test.py  bf7a9c976445_fix_equipment_relations.py
app/: create_tables.py  db.py  db_models.py  main.py  test.ipynb
db/: chroma.sqlite3
personaltrainers/: README.md  pyproject.toml
personaltrainers/src/personaltrainers/: crew.py  main.py  prompt_cache.json  test_crew.ipynb  test_crew.py  workout_payload.json
personaltrainers/src/personaltrainers/config/: agents.yaml  tasks.yaml
personaltrainers/src/personaltrainers/db/: chroma.sqlite3
personaltrainers/src/personaltrainers/tools/: db_call.py  db_tool.py  functions.py  prompt_cache.py
