[project]
name = "personaltrainers"
version = "0.1.0"
description = "PersonalTrainers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "minds-sdk>=1.3.3",
]

[project.scripts]
personaltrainers = "personaltrainers.main:run"
run_crew = "personaltrainers.main:run"
train = "personaltrainers.main:train"
replay = "personaltrainers.main:replay"
test = "personaltrainers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
